kubernetes/exposing-applications/ip-direct-attached-to-pod.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app
  annotations:
    metallb.universe.tf/address-pool: public-ord1
spec:
  externalTrafficPolicy: Local
  type: LoadBalancer
  ports:
    - port: 1 # Do not change this
      targetPort: attach
      protocol: TCP
      name: attach
     # Do not add any additional ports, it is not required for direct attach
  selector: 
    coreweave.cloud/ignore: ignore # Do not change this
